--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-TSPSG - TSP Solver and Generator
+TSPSG: TSP Solver and Generator
 Copyright (C) 2007-2009 Lёppa <contacts[at]oleksii[dot]name>
 
 $Id$
