+ Translatable About dialog. * Improved installation rules in .pro file. * Disabled SVG and JPEG support. They aren't needed at this point. - Fixed a bug when labels were hardly visible under Windows Vista/7 whith translucency on and a dark background behind the application. - Fixed a bug when Main Window area was blank if the application was compiled using Qt < 4.6.0.

--- a/README
+++ b/README
@@ -32,7 +32,7 @@ along with TSPSG.  If not, see <http://www.gnu.org/licenses/>.
 
 Third parties:
 * This software is created using opensource version of Qt toolkit,
-  see http://www.qtsoftware.com/
+  see http://qt.nokia.com/
 * The icons used in this software are part of Oxygen Icons project
   licensed according to the GNU Lesser General Public License,
   see http://www.oxygen-icons.org/
