* TSPSG will now try to use your current icon theme in Linux if it follows freedesktop.org icon and naming spesifications:   see http://standards.freedesktop.org/icon-theme-spec/icon-theme-spec-latest.html   and http://standards.freedesktop.org/icon-naming-spec/icon-naming-spec-latest.html * Translations are now bundled "inside" TSPSG (as resources). You can override a bundled translation by placing your version with the same name into the l10n folder. * Some small MacOSX related fixes.

--- a/docs/dox/install.dox
+++ b/docs/dox/install.dox
@@ -313,8 +313,8 @@ installation directory manually.
 
 \section i_s8 REFERNECES
 
-  -# \anchor r1 \ref cr1 "^" http://qt.nokia.com/
-  -# \anchor r2 \ref cr1 "^" http://qt.nokia.com/developer/nokia-smart-installer-for-symbian
-  -# \anchor r3 \ref cr2 "^" https://www.symbiansigned.com/app/page/public/openSignedOnline.do
-  -# \anchor r4 \ref cr3 "^" http://sourceware.org/bugzilla/show_bug.cgi?id=10165
+  -# \ref cr1 "^" \anchor r1 http://qt.nokia.com/
+  -# \ref cr1 "^" \anchor r2 http://qt.nokia.com/developer/nokia-smart-installer-for-symbian
+  -# \ref cr2 "^" \anchor r3 https://www.symbiansigned.com/app/page/public/openSignedOnline.do
+  -# \ref cr3 "^" \anchor r4 http://sourceware.org/bugzilla/show_bug.cgi?id=10165
 */
