--- a/docs/dox/mainpage.dox
+++ b/docs/dox/mainpage.dox
@@ -48,16 +48,16 @@ using <em>Branch and Bound method</em> to solve a particular task.
 
 \section m_s3 LICENSE
 
-\b TSPSG is free software: you can redistribute it and/or modify\n
+This program is free software: you can redistribute it and/or modify\n
 it under the terms of the GNU General Public License as published by\n
 the Free Software Foundation, either version 3 of the License, or\n
 (at your option) any later version.\n
 
-\b TSPSG is distributed in the hope that it will be useful,\n
+This program is distributed in the hope that it will be useful,\n
 but WITHOUT ANY WARRANTY; without even the implied warranty of\n
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n
 \ref license "GNU General Public License" for more details.\n
 
 You should have received a copy of the \ref license "GNU General Public License"\n
-along with \b TSPSG.  If not, see <http://www.gnu.org/licenses/>.
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */
