+ Added icon on the OK button in the About dialog. * Updated all links to point to the official website - http://tspsg.info/

--- a/docs/dox/mainpage.dox
+++ b/docs/dox/mainpage.dox
@@ -8,7 +8,7 @@ $URL$
 <b>TSPSG: TSP Solver and Generator</b>
 \author Copyright &copy; 2007-2010 Lёppa <contacts[at]oleksii[dot]name>
 
-\b Homepage: <a href="http://tspsg.sourceforge.net/">tspsg.sourceforge.net</a>
+\b Homepage: <a href="http://tspsg.info/">tspsg.info</a>
 
 \section m_s1 ABOUT TSPSG
 
