--- a/docs/dox/mainpage.dox
+++ b/docs/dox/mainpage.dox
@@ -30,6 +30,7 @@ using <em>Branch and Bound method</em> to solve a particular task.
 
 \ref changelog
 
+  -# \ref cl_b145
   -# \ref cl_b100
   -# \ref cl_b42
 
