--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,6 +1,50 @@
-===========================================
- TSPSG: TSP Solver and Generator Changelog
-===========================================
+====================================
+ TSP Solver and Generator ChangeLog
+====================================
+
+
+TSPSG v0.1.4 beta 2 (build 170)
+===============================
+
+WHAT'S NEW
+----------
+
+  - Support for embedded base64 encoded images when saving solution as
+    HTML (Ticket #4).
+  - The ability to setup page-related options for printing (Ticket #5).
+  - Solution graph size can now be controlled using Output/GraphWidth
+    setting in tspsg.ini. Value is in centimeters. (Ticket #8)
+
+
+CHANGES & IMPROVEMENTS
+----------------------
+
+  - Any value that is entered into task table and doesn't contain
+    numbers is considered an infinity.
+  - Some error messages are more verbose.
+  - Removed a prompt about turning off language autodetection when
+    selecting a language.
+  - Handheld version includes larger icons (48x48 instead of 32x32).
+  - If after running Save As dialog file name doesn't have an extension
+    .tspt will be automatically appended.
+  - Translucency effect is available on all desktop platforms. No check
+    for its support by window system is made at this moment. Blur is
+    only available in Windows Vista or higher.
+
+
+BUGFIXES
+--------
+
+  - Bug #2: Solution graph is too small on high resolution screens.
+  - Bug #3: Solution graph font size should be fixed.
+  - Bug #6: Bug: Actions in Options Menu.
+  - Bug #7: No Cancel option in Unsaved Changes dialog under Symbian.
+  - Bug #9: Solution graph is still exported to HTML when graph
+    generation is disabled.
+  - Language name was not loaded in its menu item's status tip which
+    caused status tip to be "Set application language to ".
+  - Icons in toolbar configuration dialog didn't follow style and one
+    of them wasn't shown.
 
 
 TSPSG v0.1.3 beta 1 (build 145)
