Converted svn keywords into git export-subst attribute.
However, keywords are now replaced only when you run 'git archive'.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -183,5 +183,5 @@ FEATURES
   * Linux/UNIX, Windows and Windows Mobile support.
 
 
-$Id$
-$URL$
+$Id: $Format:%h %ai %an$ $
+$URL: http://tspsg.info/ $
