--- a/docs/dox/changelog.dox
+++ b/docs/dox/changelog.dox
@@ -1,8 +1,8 @@
 /*! \page changelog TSPSG ChangeLog
 
 \author Copyright &copy; 2007-2011 Lёppa <contacts[at]oleksii[dot]name>
-$Id$
-$URL$
+$Id: $Format:%h %ai %an$ $
+$URL: http://tspsg.info/ $
 
 <hr>
 
