Updated year in copyright headers...

--- a/docs/dox/install.dox
+++ b/docs/dox/install.dox
@@ -1,6 +1,6 @@
 /*! \page install TSPSG Installation Guide
 
-\author Copyright &copy; 2007-2011 Lёppa <contacts[at]oleksii[dot]name>
+\author Copyright &copy; 2007-2012 Oleksii Serdiuk <contacts[at]oleksii[dot]name>
 $Id: $Format:%h %ai %an$ $
 $URL: http://tspsg.info/ $
 
