--- a/docs/dox/mainpage.dox
+++ b/docs/dox/mainpage.dox
@@ -6,7 +6,7 @@ $URL: http://tspsg.info/ $
 
 \image html tspsg.png
 <b>TSPSG: TSP Solver and Generator</b>
-\author Copyright &copy; 2007-2011 Lёppa <contacts[at]oleksii[dot]name>
+\author Copyright &copy; 2007-2012 Oleksii Serdiuk <contacts[at]oleksii[dot]name>
 
 \b Homepage: <a href="http://tspsg.info/">tspsg.info</a>
 
